2003-02-11    <smulloni@smullbola.smullyan.org>

	* pylibs/vfs/importer.py (VFSOwner.getmod): Package imports were
	broken, but now they seem to work.

2003-02-08  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/sessionHandler/FSSessionStore.py
	(FSSessionStoreImpl.__setPickle): wrapping calls to the pickler in
	try/except so the pickle files will be unlocked even in the case
	of error.

2003-02-08 Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/product/loader.py (get_product_path): added
	useful little function.

2003-02-08  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/xmlrpchandler.py: fix for methodSignature, whose purpose
	had been misunderstood.  The original implementation, which
	returned the *call* signature of the underlying Python method, 
	is retained as system.methodPydoc.

2003-02-07 Jacob Smullyan <smulloni@smullyan.org>

	* pylibs/vfs/rosio.py (RO_StringIO.__iter__): removed xreadlines, since
	it produces a DeprecationWarning with Python 2.3a1.

2003-02-07 Jacob Smullyan <smulloni@smullyan.org>

	* SkunkWeb/Services/templating/UrlBuilder.py: now XHTML-compliant
	by default.  

	* pylibs/PyDO/mysqlconn.py (PyDOMySQL.sqlStringAndValue): fix for NULL.

	* pylibs/setup-pylibs.in: distutils setup script used by the
	Makefile to build extension modules.

	* pylibs/Makefile.in: now uses distutils to build the extension modules;
	excludes some deprecated or unnecessary material from being built
	and installed.  Now works with Python 2.3a1!

	* Makefile.in: SW_VERSION is now defined here.


2003-02-06 Jacob Smullyan <smulloni@smullyan.org>

	* pylibs/PyDO/mysqlconn.py (PyDOMySQL.__unpackConnectArgs): 
	allow verbosity to be specified in a connectstring.
	(PyDOMySQL.getAutoIncrement): fix for autoincrement.

2003-02-05 Jacob Smullyan <smulloni@smullyan.org>

	* SkunkWeb/Services/rewrite.py: made it possible to pass
	a callable to RewriteCond for string keyword arguments (this was